--- a/app/src/main/res/layout/ride_recyclerview_item.xml
+++ b/app/src/main/res/layout/ride_recyclerview_item.xml
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/destinationText" />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/driverCourse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -55,18 +55,28 @@
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView2" />-->
+
+    <ImageView
+        android:id="@+id/ic_person"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/ic__person"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/driverName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
         android:text="Vinicius Borges"
         android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/driverCourse"
-        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ic_person" />
 
 
     <ImageView
