--- a/app/src/main/res/layout/fragment_rides.xml
+++ b/app/src/main/res/layout/fragment_rides.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.rides.RidesFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBarRecyclerView"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_layout"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerview_layout"
+        app:layout_constraintStart_toStartOf="@+id/recyclerview_layout"
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
+
     <LinearLayout
         android:id="@+id/nothing_to_show"
         android:layout_width="wrap_content"
@@ -32,6 +42,38 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="Ainda não há nada por aqui"
+            android:textColor="@color/theme_color_light"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/not_found"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:visibility="gone"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_not_found"
+            app:layout_constraintBottom_toTopOf="@+id/guideline5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Sem resultados!"
             android:textColor="@color/theme_color_light"
             android:textSize="16sp"
             android:textStyle="bold" />
