--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,26 +20,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".92" />
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_logout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:textColor="@color/theme_color_light"
+        android:layout_margin="16dp"
         android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/ic_google"
-        app:cornerRadius="30dp"
+        android:padding="15dp"
         android:text="Sair"
-        android:layout_margin="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        android:textColor="@color/theme_color_light"
+        app:cornerRadius="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
