--- a/app/src/main/res/layout/activity_ride_detail.xml
+++ b/app/src/main/res/layout/activity_ride_detail.xml
@@ -24,7 +24,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/profile_icon"
+                android:id="@+id/profile_photo"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="20dp"
@@ -39,20 +39,17 @@
                 android:id="@+id/driver_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="-30dp"
                 android:layout_marginTop="15dp"
-                android:text="Vinicius Borges"
+                android:layout_marginStart="40dp"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/profile_icon"
+                app:layout_constraintStart_toEndOf="@+id/profile_photo"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/driver_course"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Engenharia de Software"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/driver_name"
                 app:layout_constraintTop_toBottomOf="@+id/driver_name" />
@@ -128,7 +125,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/origin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Recanto das Emas"
@@ -168,7 +165,7 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/origin" />
 
             <TextView
                 android:id="@+id/time"
@@ -235,6 +232,7 @@
                 android:id="@+id/person1_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:text="Mariana"
                 android:textSize="10sp"
                 android:textStyle="bold"
@@ -263,6 +261,7 @@
                 android:id="@+id/person2_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:text="João"
                 android:textSize="10sp"
                 android:textStyle="bold"
@@ -291,6 +290,7 @@
                 android:id="@+id/person3_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:text="Fernando"
                 android:textSize="10sp"
                 android:textStyle="bold"
@@ -312,6 +312,7 @@
                 android:id="@+id/person4_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:text="Joana"
                 android:textSize="10sp"
                 android:textStyle="bold"
@@ -380,7 +381,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="16sp"
-                android:text="HB20S"
                 app:layout_constraintStart_toEndOf="@+id/model_text"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -400,7 +400,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Vermelho"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/color_text"
                 app:layout_constraintTop_toBottomOf="@+id/model" />
@@ -421,7 +420,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Q**-1718"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/plate_text"
                 app:layout_constraintTop_toBottomOf="@+id/color" />
@@ -439,7 +437,7 @@
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/ride_request_detail"
+        android:id="@+id/ride_request_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
