--- a/app/src/main/res/layout/activity_ride_detail.xml
+++ b/app/src/main/res/layout/activity_ride_detail.xml
@@ -441,12 +441,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:text="Solicitar"
+        android:visibility="gone"
         android:textAllCaps="false"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/car_detail_card" />
+
+
+    <ProgressBar
+        android:id="@+id/progressBarButton"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/car_detail_card"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
