--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF6E6E</color>
+    <color name="grey">#8E8E8E</color>
     <color name="theme_color">#04391C</color>
     <color name="theme_color_light">#055429</color>
 </resources>
